--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,19 @@
     <freemarker.version>2.3.23</freemarker.version>
   </properties>
   <dependencies>
-  <dependency>
+    <!-- spring session -->
+    <dependency>
+      <groupId>org.springframework.session</groupId>
+      <artifactId>spring-session-data-redis</artifactId>
+      <version>1.3.1.RELEASE</version>
+    </dependency>
+    <dependency>
+      <groupId>biz.paluch.redis</groupId>
+      <artifactId>lettuce</artifactId>
+      <version>3.5.0.Final</version>
+    </dependency>
+
+    <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-webmvc</artifactId>
     <version>${spring.version}</version>
