--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,15 @@
 		http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
   <display-name>fileServer</display-name>
 
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>WEB-INF/config/spring-application-*.xml</param-value>
+  </context-param>
+
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+
   <!-- 设置编码UTF-8 -->
   <filter>
     <filter-name>CharacterEncodingFilter</filter-name>
@@ -45,6 +54,17 @@
   <filter-mapping>
     <filter-name>servletRequestWrapperFilter</filter-name>
     <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <filter>
+    <filter-name>springSessionRepositoryFilter</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>springSessionRepositoryFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>ERROR</dispatcher>
   </filter-mapping>
 
   <servlet>
